--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fafasite</title>
 </head>
+
 <body>
- <h1>rafa</h1> 
+    <header>
+        <ul>
+            <li>funk</li>
+            <li>sertanejo</li>
+            <li>pop</li>
+        </ul>
+    </header
+
 </body>
+
 </html>
